--- a/heat-wave/src/main/resources/application.properties
+++ b/heat-wave/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:hsqldb:mem:.
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.hsqldb.jdbcDriver
-spring.view.prefix=/WEB-INF/
+spring.view.prefix=/static/
 spring.view.suffix=.jsp
 server.port=8081
