--- a/heat-wave/build.gradle
+++ b/heat-wave/build.gradle
@@ -49,13 +49,16 @@ dependencies {
     compile 'commons-validator:commons-validator:1.4.0'
     compile 'com.google.guava:guava:17.0'
 
+	// Spring Security
+	compile("org.springframework.security:spring-security-web:4.0.3.RELEASE")
+
 	// Spring Social
-	//compile("org.springframework.social:spring-social-config:1.1.0.RELEASE")
-	//compile("org.springframework.social:spring-social-core:1.1.0.RELEASE")
-	//compile("org.springframework.social:spring-social-security:1.1.0.RELEASE")
     compile("org.springframework.social:spring-social-facebook:2.0.3.RELEASE")
     compile("org.springframework.social:spring-social-twitter:1.1.0.RELEASE")
+    compile("org.springframework.social:spring-social-google:1.0.0.RELEASE")
     compile("org.springframework.social:spring-social-web:1.1.4.RELEASE")
+    compile("org.springframework.social:spring-social-config:1.1.4.RELEASE")
+    compile("org.springframework.social:spring-social-security:1.1.4.RELEASE")
 
     // Testing framework
     testCompile 'org.springframework.boot:spring-boot-starter-test'    
